--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
+    "@types/node-fetch": "^2.6.9",
     "@types/react-scroll": "^1.8.6",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
